src/css/style.css
:root {
  --font-body: Arial, Helvetica, sans-serif;
  --font-headline: Haettenschweiler, "Arial Narrow Bold", sans-serif;
  /* colors */
  --primary-color: #f0a868;
  --secondary-color: #525b0f;
  --tertiary-color: #8a470c;
  --light-grey: #d0d0d0;
  --dark-grey: #303030;

  /* sizes */
  --font-base: 18px;
  --small-font: 0.8em;
  --large-font: 1.2em;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: var(--font-body);
  font-size: var(--font-base);
  color: var(--dark-grey);
}

img {
  max-width: 100%;
}

header {
  display: flex;
  justify-content: space-between;
  padding: 0.5rem;
}

footer {
  font-size: var(--small-font);
  padding: 1em;
}

p {
  padding: 0.75rem;
}

.logo {
  line-height: 60px;
  width: 245px;
  overflow: hidden;
  display: flex;
  font-size: 30px;
  text-align: right;
  font-family: var(--font-headline);
}

.logo img {
  width: 60px;
  height: 60px;
}

.logo a {
  text-decoration: none;
  color: var(--font-body);
}

.hero {
  position: relative;
}

.hero .logo {
  position: absolute;
  left: calc(50% - 60px);
  bottom: -15px;
  background-color: white;
}

.logo--square {
  font-size: var(--small-font);
  width: 110px;
  height: 80px;

  flex-direction: column;
  align-items: flex-end;
  box-shadow: 1px 1px 4px var(--light-grey);
  justify-content: center;
  align-items: center;
  line-height: 1;
}

.logo--square img {
  width: 90px;
  height: 90px;
  margin-top: -1.3em;
}

.logo--square > div {
  margin-top: -1.7em;
}

/* utility classes */
.highlight {
  color: var(--tertiary-color);
}

button {
  padding: 0.5em;
  background-color: var(--secondary-color);
  color: white;
  margin: 0.5rem;
  display: inline-flex;
  border: 0;
  border-radius: 0.375rem;
  font-size: var(--large-font);
  cursor: pointer;
}

.card__table button{
  display: inline-flex;
}

.cart-total, strong {
  font-weight: bold;
  margin-top: 0.5rem;
}
.divider {
  border-bottom: 2px solid var(--primary-color);
}

/* End utility classes */

/* Cart icon styles */
.cart {
  padding-top: 1em;
  position: relative;
  text-align: center;
}

.cart svg {
  width: 25px;
}

.cart:hover svg {
  fill: gray;
}

/* End cart icon styles */

.mission {
  position: absolute;
  top: 1rem;
  left: 0;
  right: 0;
  line-height: 1.3;
  width: 100%;
  background-color: var(--dark-grey);
  color: var(--light-grey);
  opacity: 0.8;
}

.mission p {
  margin: 0 auto;
  width: 50%;
  text-align: center;
}

.products {
  margin-top: 2rem;
  padding: 1rem;
}

.product-list {
  display: flex;
  flex-flow: row wrap;
  list-style-type: none;
  justify-content: center;
}

.product-list a {
  text-decoration: none;
  color: var(--dark-grey);
}

/* Styles for product lists */
.product-card {
  flex: 1 1 45%;
  margin: 0.25em;
  padding: 0.5em;
  border: 1px solid var(--light-grey);
  max-width: 250px;
}

.product-card h2,
.product-card h3,
.product-card p {
  margin: 0.5em 0;
}

.card__brand {
  font-size: var(--small-font);
}

.card__name {
  font-size: 1em;
}

/* End product list card */

.product-detail {
  padding: 1em;
  max-width: 500px;
  margin: auto;
}

.product-detail img {
  width: 100%;
}

/* Start cart list card styles */
/* .cart-card {
  display: grid;
  grid-template-columns: 25% auto 15%;
  font-size: var(--small-font);
  max-height: 120px;
  align-items: center;
} 
.cart-card__image {
  grid-row: 1/3;
  grid-column: 1;
}
.cart-card .card__name {
  grid-row: 1;
  grid-column: 2;
}
.cart-card__color {
  grid-row: 2;
  grid-column: 2;
}
.cart-card p {
  margin-top: 0;
}
.cart-card__quantity {
  grid-row: 1;
  grid-column: 3;
}
.cart-card__price {
  grid-row: 2;
  grid-column: 3;
} */

/* cart card redesign*/
.cart-card {
  display: grid;
  grid-template-areas:
    "image itemName"
    "image itemColor"
    "image table";
  grid-template-columns: 25% auto;
  column-gap: 1rem;
  font-size: var(--small-font);
  align-content: center;
}
.cart-card__image {
  grid-area: image;
}
.card__name {
  grid-area: itemName;
  margin-top: 0.375rem;
}
.cart-card__color {
  grid-area: itemColor;
}
.card__table {
  grid-area: table;
}


/* End of cart card redesign*/

/* general*/

.remove-item {
  background-color: red;
  margin: 0;
}

.decrease-item {
  background-color: gray;
}

.increase-item {
  background-color: green;
}

.d-flex {
  display: flex;
  align-items: center;
}

@media screen and (min-width: 500px) {
  body {
    max-width: 1080px;
    margin: auto;
  }

  .mission {
    font-size: 1.2em;
  }

  .decrease-item, .increase-item, .remove-item {
    font-size: var(--small-font); 
  }
}

